add dependency on ROS visualization_msgs

--- a/towr_ros/CMakeLists.txt
+++ b/towr_ros/CMakeLists.txt
@@ -7,13 +7,12 @@ find_package(catkin REQUIRED COMPONENTS
   roscpp
   rosbag
   std_msgs
-  xpp_msgs
+  visualization_msgs
   message_generation
+  xpp_msgs
   xpp_states
   towr
 )
-
-find_package(Curses REQUIRED)
 
 
 ## Generate messages in the 'msg' folder
@@ -31,43 +30,70 @@ include_directories(
   ${catkin_INCLUDE_DIRS}
 )
 
+
 ## The main executable that runs TOWR
 add_executable(towr_ros 
   src/towr_ros.cc
 )
-add_dependencies(towr_ros ${PROJECT_NAME}_gencpp) # build .msg first
+add_dependencies(towr_ros 
+  ${PROJECT_NAME}_gencpp
+)
 target_link_libraries(towr_ros
   ${catkin_LIBRARIES}
 )
 
-## Keyboard interfaces and other helpers
-add_executable(towr_user_interface src/towr_user_interface.cc)
-add_dependencies(towr_user_interface ${PROJECT_NAME}_gencpp) # build .msg first
+
+## Keyboard interfaces (ncurses)
+find_package(Curses REQUIRED)
+add_executable(towr_user_interface 
+  src/towr_user_interface.cc
+)
+add_dependencies(towr_user_interface 
+  ${PROJECT_NAME}_gencpp
+)
 target_link_libraries(towr_user_interface 
   ${catkin_LIBRARIES}
   ${CURSES_LIBRARIES}
 )
 
-add_executable(rviz_terrain_publisher src/rviz_terrain_publisher.cc
+
+# Display different terrains in rviz
+add_executable(rviz_terrain_publisher 
+  src/rviz_terrain_publisher.cc
   src/rviz_terrain_builder.cc
 )
-add_dependencies(rviz_terrain_publisher ${PROJECT_NAME}_gencpp) # build .msg first
+add_dependencies(rviz_terrain_publisher 
+  ${PROJECT_NAME}_gencpp
+)
 target_link_libraries(rviz_terrain_publisher
   ${catkin_LIBRARIES}
 )
 
-add_executable(goal_pose_publisher src/goal_pose_publisher.cc)
-add_dependencies(goal_pose_publisher ${PROJECT_NAME}_gencpp) # build .msg first
+
+# Display goal pose in rviz
+add_executable(goal_pose_publisher 
+  src/goal_pose_publisher.cc
+)
+add_dependencies(goal_pose_publisher 
+  ${PROJECT_NAME}_gencpp
+) 
 target_link_libraries(goal_pose_publisher
   ${catkin_LIBRARIES}
 )
 
-add_executable(rosbag_traj_combiner src/rosbag_traj_combiner.cc)
+
+# (Optional) to manipulate ROS bags
+add_executable(rosbag_traj_combiner 
+  src/rosbag_traj_combiner.cc
+)
 target_link_libraries(rosbag_traj_combiner
   ${catkin_LIBRARIES}
 )
 
-add_executable(rosbag_geom_msg_extractor src/rosbag_geom_msg_extractor.cc)
+
+add_executable(rosbag_geom_msg_extractor 
+  src/rosbag_geom_msg_extractor.cc
+)
 target_link_libraries(rosbag_geom_msg_extractor
   ${catkin_LIBRARIES}
 )
