make ros log folder location of default bag file

--- a/towr_ros/CMakeLists.txt
+++ b/towr_ros/CMakeLists.txt
@@ -117,6 +117,6 @@ install(
 
 # Mark other files for installation
 install(
-  DIRECTORY launch
+  DIRECTORY launch rviz bash
   DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}
 )
