start adding visualization of first state

--- a/towr_ros/CMakeLists.txt
+++ b/towr_ros/CMakeLists.txt
@@ -10,7 +10,7 @@ find_package(catkin REQUIRED COMPONENTS
   visualization_msgs
   message_generation
   xpp_msgs
-  xpp_states
+  xpp_states 1.8.0
   towr
 )
 
