start adding rosdoc

--- a/towr/package.xml
+++ b/towr/package.xml
@@ -26,6 +26,7 @@
   <buildtool_depend>cmake</buildtool_depend>
   <export>
     <build_type>cmake</build_type>
+    <rosdoc config="${prefix}/doc/rosdoc.yaml"/>
   </export>
- 
+  
 </package>
