--- a/towr_ros/package.xml
+++ b/towr_ros/package.xml
@@ -10,11 +10,12 @@
     <a href="http://wiki.ros.org/xpp">xpp</a>.
   </description>
 
-  <author email="winklera@ethz.ch">Alexander W. Winkler</author>
-  <maintainer email="winklera@ethz.ch">Alexander W. Winkler</maintainer>
+  <author>Alexander W. Winkler</author>
+  <maintainer email="alexander.w.winkler@gmail.com">Alexander W. Winkler</maintainer>
   <license>BSD</license>
   
   <url type="website">http://github.com/ethz-adrl/towr</url>
+  <url type="bugtracker">http://github.com/ethz-adrl/towr/issues</url>
 
   <buildtool_depend>catkin</buildtool_depend>
     
