separate towr_ros from actual application

--- a/towr_ros/CMakeLists.txt
+++ b/towr_ros/CMakeLists.txt
@@ -33,6 +33,7 @@ include_directories(
 
 ## The main executable that runs TOWR
 add_executable(towr_ros 
+  src/towr_app.cc
   src/towr_ros.cc
 )
 add_dependencies(towr_ros 
